--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id='root'></div>
+    <div id='root' class='container1'></div>
 
     <script src="./index.js"></script>
 </body>
